# graphic_graphic_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/ArkGraphics2D/: BUILD.gn  index.cj
mock/: ohos.graphics.cj  ohos.graphics.color_space_manager.cj  ohos.graphics.display_sync.cj
ohos/color_manager/: BUILD.gn  cj_color_manager_log.cj  cj_color_manager_utils.cj  color_space_manager.cj  color_space_primaries.cj
ohos/graphics/: BUILD.gn  graphics.cj
ohos/graphics/color_space_manager/: BUILD.gn  cj_color_manager_log.cj  cj_color_manager_utils.cj  color_space_manager.cj  color_space_primaries.cj
ohos/graphics/display_sync/: BUILD.gn  displaysync.cj  displaysync_error.cj  displaysync_ffi.cj
test/APILevel21/color_manager/test/entry/src/main/cangjie/src/: Test_color_manager.cj  Test_color_space.cj  test_list_color_manager.cj
test/APILevel22/color_manager/test/entry/src/main/cangjie/src/: Test_color_manager.cj
test/color_manager/test/entry/src/main/cangjie/src/: Test_color_manager.cj  Test_color_space.cj
test/hide_graphic/test/entry/src/main/cangjie/src/: Test_hide_graphic.cj  test_list_hide_graphic.cj
