# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

graphic_cangjie_wrapper_packages_ohos = [
    "//foundation/graphic/graphic_cangjie_wrapper/ohos/graphics:ohos.graphics",
    "//foundation/graphic/graphic_cangjie_wrapper/ohos/graphics/color_space_manager:ohos.graphics.color_space_manager"
]
graphic_cangjie_wrapper_packages_kit = [
    "//foundation/graphic/graphic_cangjie_wrapper/kit/ArkGraphics2D:kit.ArkGraphics2D",
]

copy_ohos_cangjie_sdk_api_lib("copy_sdk_graphic_cangjie_libs") {
  ohos_inputs = graphic_cangjie_wrapper_packages_ohos
  kit_inputs = graphic_cangjie_wrapper_packages_kit
}